<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp"
    tools:context=".MainActivity">
    <ImageView
        android:id="@+id/imageBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/black_back_arrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textBack"
        app:layout_constraintTop_toTopOf="@+id/textBack"
        app:layout_constraintEnd_toEndOf="@+id/textBack"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingStart="5dp"
        android:paddingLeft="5dp"
        android:paddingEnd="0dp"
        android:paddingRight="0dp"/>

    <TextView
        android:id="@+id/textBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintLeft_toRightOf="@+id/imageBack"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/childParent"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingEnd="10dp"
        android:paddingRight="10dp"
        android:paddingStart="0dp"
        android:paddingLeft="0dp"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/childParent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textBack"
        android:background="@drawable/layout_bg">
        <TextView
            android:id="@+id/answeredCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/count"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="@+id/childParent"
            app:layout_constraintStart_toStartOf="@+id/childParent"
            app:layout_constraintEnd_toStartOf="@+id/staticTitle"
            android:paddingLeft="0dp"
            android:paddingStart="0dp"
            android:paddingEnd="4dp"
            android:paddingRight="4dp"/>
        <TextView
            android:id="@+id/staticTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/questions_answered"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="@+id/answeredCount"
            app:layout_constraintStart_toEndOf="@id/answeredCount"
            app:layout_constraintBottom_toBottomOf="@+id/answeredCount"
            />
        <ProgressBar
            android:id="@+id/determinateBar"
            style="@android:style/Widget.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="15dp"
            app:layout_constraintEnd_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/staticTitle"
            android:paddingTop="3dp"
            android:paddingBottom="5dp"

            />

        <TextView
            android:id="@+id/quizCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_no"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/determinateBar"
            app:layout_constraintStart_toStartOf="@+id/childParent"
            app:layout_constraintEnd_toStartOf="@+id/questionTitle"
            android:paddingLeft="0dp"
            android:paddingStart="0dp"
            android:paddingEnd="4dp"
            android:paddingRight="4dp"
            />
        <TextView
            android:id="@+id/questionTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="5dp"
            android:paddingLeft="2dp"
            android:text="@string/questionTitle"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="@+id/quizCount"
            app:layout_constraintStart_toEndOf="@id/quizCount"
            />
        <RadioGroup
            android:id="@+id/radiogroupQuizOptions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:orientation="vertical"
            android:padding="15dp"
            android:layout_margin="8dp"
            app:layout_constraintStart_toStartOf="@id/childParent"
            app:layout_constraintEnd_toEndOf="@id/childParent"
            app:layout_constraintTop_toBottomOf="@+id/questionTitle"
            app:layout_constraintBottom_toBottomOf="@id/childParent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/previous_btn"
        android:layout_width="120dp"
        android:layout_height="40dp"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_marginStart="10dp"
        android:text="@string/previous"
        android:textStyle="bold"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:padding="4dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:cornerRadius="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/next_btn"
        />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/next_btn"
        android:layout_width="160dp"
        android:layout_height="40dp"
        style="@style/Widget.MaterialComponents.Button"
        app:cornerRadius="5dp"
        android:text="@string/next"
        android:textStyle="bold"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:padding="4dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/previous_btn"
        />

</androidx.constraintlayout.widget.ConstraintLayout>